# Applied_Systems_Multi_Thd_Tcp_Xml_Client

./: CMakeLists.txt  ClientXmlFile.xml  network.h
src/: CMakeLists.txt  main.cpp  network.cpp  xml.cpp  xml.h
